# detlab

./: .bootstrap  .gitattributes  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
app/: README.md
app/default/: app.conf  props.conf
app/lookups/: cloud_storage_ips.csv  rmm_domains.csv  tor_relays.csv
cases/t1021_001_rdp_lateral/: README.md
cases/t1021_002_smb_lateral/: README.md
cases/t1027_006_html_smuggling/: README.md
cases/t1041_exfil_over_c2/: README.md
cases/t1046_network_service_discovery/: README.md
cases/t1048_003_dns_exfil/: README.md
cases/t1068_rpc_coercion/: README.md
cases/t1071_001_http_beacon_sliver/: README.md
cases/t1071_004_dns_c2_dnscat2/: README.md
cases/t1090_001_internal_proxy/: README.md
cases/t1090_003_tor_relay_use/: README.md
cases/t1110_001_ssh_brute_force/: README.md
cases/t1133_external_remote/: README.md
cases/t1190_suricata_exploit/: README.md
cases/t1213_002_info_repo_bulk/: README.md
cases/t1219_rmm_tool_use/: README.md
cases/t1499_001_volumetric_flood/: README.md
cases/t1567_002_cloud_exfil/: README.md
cases/t1568_002_dga_c2/: README.md
cases/t1570_lateral_tool_transfer/: README.md
cases/t1572_protocol_tunneling_chisel/: README.md
cases/t1583_001_nrd_resolution/: README.md
cases/t1595_002_vuln_scanning/: README.md
cases/t1595_003_web_wordlist/: README.md
lab/: README.md  SPLUNK_DEMO.md  docker-compose.yml
lab/splunk/: indexes.conf  inputs.conf  props.conf
lab/zeek/: local.zeek
scripts/: build_app.py  build_web_data.py  case_metadata.py  generate_fixtures.py  refresh_tor_relays.py  splunk_demo.py
shared/: macros.conf
tests/: test_build_app.py  test_build_web_data.py  test_case_metadata.py  test_entropy.py  test_killchain.py  test_splunk_demo.py  test_zeek_loader.py
web/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  (+2 more)
(+222 files in other folders)
